css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: 'Roboto', arial, sans-serif;
    font-size: 10px;
    background-color: #036873;
}

div.wrap {
    font-size: 2em;
    margin: 0 auto;
    /* color: #f2f2f2; */
    color: white;
    height: 200vh;
}

header {
    background-color: #022840;
}

nav.menu {
    background-color: #022840;
}

nav.menu ul {}

nav.menu ul li {}

nav.menu ul li a {
    font-size: 1em;
    text-transform: uppercase;
    text-decoration: none;
    color: lightblue;
}

main {}

footer {
    padding: 5vh 0;
    background-color: #022840;
    color: white;
    text-align: center;
}

footer a {
    color: lightblue;
    text-decoration: none;
}

footer .attribution {}

footer .attribution a {}

